# help-me-sam

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yaml
dockerfiles/: Dockerfile.local  docker-compose.yaml
localstack/: notification.json
scripts/: check-deploy-application.sh  local_aws_s3_setup.sh
thumbnail-generator/: samconfig.toml
thumbnail-generator/app/: Makefile  pyproject.toml
thumbnail-generator/app/src/: main.py
thumbnail-generator/app/src/constant/: __init__.py  application.py  aws.py  http.py  media.py
thumbnail-generator/app/src/core/: __init__.py  config.py
thumbnail-generator/app/src/custom/: __init__.py
thumbnail-generator/app/src/custom/model/: __init__.py  aws.py
thumbnail-generator/app/src/custom/types/: __init__.py  aws.py
thumbnail-generator/app/src/schema/: __init__.py  request.py  response.py
thumbnail-generator/app/src/schema/image/: __init__.py  request.py
thumbnail-generator/app/src/service/: __init__.py  image.py  message.py  uploader.py
thumbnail-generator/app/src/service/api/: __init__.py  aws.py  slack.py
thumbnail-generator/app/src/util/: __init__.py  extractor.py  parser.py
thumbnail-generator/app/src/util/aws/: __init__.py  s3.py
thumbnail-generator/dockerfiles/: Dockerfile  Dockerfile.local  docker-compose.yaml
thumbnail-generator/environments/: env.local.json  env.sample.json
thumbnail-generator/events/: event.json
thumbnail-generator/scripts/: local_aws_s3_setup.sh
thumbnail-generator/templates/: template.local.arm64.yaml  template.local.x86.yaml  (+1 more)
video-uploader/: samconfig.toml
(+26 files in other folders)
